# REVA-DETR

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  INTERRUPTED.pth.REMOVED.git-id  LICENSE  README.md  SM.png.REMOVED.git-id  comp.ipynb.REMOVED.git-id  env.yml  environment.yml  pyproject.toml  train.py  wandb.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer.tmp/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/library-scripts/: common-debian.sh
src/: comp.ipynb  comp.ipynb.REMOVED.git-id  config-defaults.yaml  convert.ipynb  convert.ipynb.REMOVED.git-id  datamodule.py  dynamic.ipynb  evaluate.py  extract.ipynb  main.py  module.py  predict.ipynb.REMOVED.git-id  predict.py  prerender.ipynb  spheres.py  spheres_antoine_laurent.py  spheres_illumination.py  spheres_predict.py  spheres_synth.py  tmp.py  train.py
src/data/: __init__.py  dataloader.py  dataset.py
src/datamodule/: DETR.py  FasterRCNN.py  __init__.py
src/dataset/: antoine_laurent.py  multi_illumination.py  predict.py  synthetic.py
src/module/: DETR.py  FasterRCNN.py  __init__.py
src/modules/: __init__.py  mrcnn.py
src/mrcnn/: __init__.py  module.py
src/notebooks/: comp.ipynb.REMOVED.git-id  convert.ipynb  convert.ipynb.REMOVED.git-id  module.py  predict.ipynb  predict.ipynb.REMOVED.git-id  prerender.ipynb  test.py
src/unet/: __init__.py  blocks.py  model.py  module.py
src/utils/: __init__.py  callback.py  coco_eval.py  coco_utils.py  dataset.py  dice.py  dice_score.py  paste.py  utils.py
utils/: data_loading.py  dice_score.py
