[tool.poetry]
authors = ["Laurent Fainsin <laurent@fainsin.bzh>"]
description = "Simple neural network to detect calibration spheres in images"
name = "sphereDetect"
version = "1.0.0"

[tool.poetry.dependencies]
albumentations = "^1.2.1"
numpy = "^1.23.2"
onnx = "^1.12.0"
python = ">=3.8,<3.11"
pytorch-lightning = "^1.7.4"
torch = "^1.12.1"
torchmetrics = "^0.9.3"
torchvision = "^0.13.1"
wandb = "^0.13.2"
rich = "^12.5.1"
pycocotools = "^2.0.4"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = "^22.8.0" }
ipykernel = "^6.15.2"
isort = "^5.10.1"
matplotlib = "^3.5.3"
mypy = "^0.971"
onnxruntime = "^1.12.1"
onnxruntime-gpu = "^1.12.1"
pre-commit = "^2.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  \.git
  \.venv
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
profile = "black"
