[tool.poetry]
authors = ["Laurent Fainsin <laurent@fainsin.bzh>"]
description = "Simple neural network to detect calibration spheres in images."
license = "MIT"
name = "sphereDetect"
readme = "README.md"
version = "2.0.0"

[tool.poetry.dependencies]
albumentations = "^1.2.1"
lightning-bolts = "^0.5.0"
numpy = "^1.23.2"
pycocotools = "^2.0.4"
python = ">=3.8,<3.11"
pytorch-lightning = "^1.7.4"
rich = "^12.5.1"
torch = "^1.12.1"
torchmetrics = "^0.9.3"
torchvision = "^0.13.1"
wandb = "^0.13.2"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.15.2"
matplotlib = "^3.5.3"
onnx = "^1.12.0"
onnxruntime = "^1.12.1"
onnxruntime-gpu = "^1.12.1"

[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.1.0"
bandit = "^1.7.4"
black = {extras = ["jupyter"], version = "^22.8.0"}
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flake8]
# rules ignored
extend-ignore = ["W503", "D401", "D403"]
per-file-ignores = ["__init__.py:F401", "__init__.py:D104"]
# black
ignore = "E203"
max-line-length = 120

[tool.black]
exclude = '''
/(
  \.git
  \.venv
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
